2006-05-15  Chris Toshok  <toshok@ximian.com>

	[ fixes bug #78011 ]
	* ThemeWin32Classic.cs (DataGridPaintRows): pass the clip argument
	on to DataGridPaintRow.
	(DataGridPaintRow): take a clip argument, and only draw the cells
	which intersect it.  same with the not_usedarea.

	* Theme.cs (DataGridPaintRow) add @clip parameter.

	* DataGrid.cs (ScrollToColumnInPixels): simplify, use
	XplatUI.ScrollWindow.
	(ScrollToRow): same.

	* DataGridDrawingLogic.cs (UpdateVisibleColumn): fix corner case
	with last column which was causing a gray swath to appear with the
	XplatUI.ScrollWindow code.

2006-05-15  Chris Toshok  <toshok@ximian.com>

	* ListBox.cs (HorizontalScrollEvent): in the non-multicolumn case,
	use XplatUI.ScrollWindow.
	(VerticalScrollEvent): use XplatUI.ScrollWindow.

2006-05-15  Peter Dennis Bartok  <pbartok@novell.com> 

	* TextBoxBase.cs: Added handling of middle-button paste for X11. (#78375)

2006-05-15  Peter Dennis Bartok  <pbartok@novell.com>

	* Cursors.cs: For X11, read NWSE and NESW cursors from our resource
	  file since there are no equivalent X11 cursors

2006-05-15  Atsushi Enomoto  <atsushi@ximian.com>

	* MonthCalendar.cs : DateTimePicker should reflect selected date
	  on mouse*up*, not mouse*down*. Fixed originally reported part of
	  bug #76474.

2006-05-15  Atsushi Enomoto  <atsushi@ximian.com>

	* TabControl.cs : When argument index is equal or more than tab
	  count, just ignore. Fixed bug #78395.

2006-05-15  Peter Dennis Bartok  <pbartok@novell.com>

	* Control.cs: Dispose all child controls when control is diposed (#78394)

2006-05-14  Alexander Olk  <alex.olk@googlemail.com>

	* ColorDialog.cs: Finally it is possible to select the color with
	  the text boxes

2006-05-14  Alexander Olk  <alex.olk@googlemail.com>

	* PrintDialog.cs: Fix typo

2006-05-14  Alexander Olk  <alex.olk@googlemail.com>

	* PrintDialog.cs: PrintDialog is not resizable
	* ThemeWin32Classic.cs: Draw non links in LinkLabel with the correct